k8s/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: cloudmart-prod
  labels:
    app: order-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: order-service
    spec:
      # TODO: Add serviceAccountName for workload identity
      serviceAccountName: order-service-sa
      containers:
      - name: order-service
        image: 145023091806.dkr.ecr.ap-south-1.amazonaws.com/cloudmart/order-service:latest
        ports:
        - containerPort: 8002
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
        readinessProbe:
          httpGet:
            path: /ready
            port: 8002
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8002
          initialDelaySeconds: 10
          periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: cloudmart-prod
spec:
  selector:
    app: order-service
  ports:
  - port: 8002
    targetPort: 8002
  type: ClusterIP
