k8s/product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: cloudmart-prod
  labels:
    app: product-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: product-service
    spec:
      # TODO: Add serviceAccountName for workload identity
      serviceAccountName: product-service-sa
      containers:
      - name: product-service
        image: 145023091806.dkr.ecr.ap-south-1.amazonaws.com/cloudmart/product-service:latest   # Replace with your registry URI
        ports:
        - containerPort: 8001
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
        readinessProbe:
          httpGet:
            path: /ready
            port: 8001
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8001
          initialDelaySeconds: 10
          periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: cloudmart-prod
spec:
  selector:
    app: product-service
  ports:
  - port: 8001
    targetPort: 8001
  type: ClusterIP
